# CEDT

./: .gitignore  1  1.cpp  1.py  EXCLUDED_LARGE_FILES.txt  README.md  REPO_CLEANUP_PLAN.md  package-lock.json  package.json
ACP/: AGENTS.md  README.md
Data/: heap_erase.cpp  (+2 more)
apps/phone_check/: Cargo.toml
apps/phone_check/src/: device.rs  filter.rs  main.rs  stream.rs
apps/phone_check/src/tui/: mod.rs
experiments/Super AI/: .gitignore  AGENTS.md  README.md  blend.py  clea.py  pyproject.toml  submission (1).csv
experiments/Super AI/output/jupyter-notebook/: timm-image-classification-cv.ipynb
experiments/Super AI/src/autotask/: __main__.py  cli.py  config.py  evaluation.py
experiments/Super AI/src/autotask_lab.egg-info/: PKG-INFO  entry_points.txt
experiments/Super AI/super-ai-engineer-ss-6-sleep-stage-classification/: sample_submission.csv
experiments/Super AI/tasks/calculator_fix/: task.toml
experiments/Super AI/tasks/calculator_fix/runs/calculator-fix/: baseline.json
experiments/Super AI/tasks/calculator_fix/runs/calculator-fix/attempt-01/: prompt.md
experiments/Super AI/tasks/calculator_fix/runs/calculator-fix/attempt-02/: prompt.md
experiments/Super AI/tasks/calculator_fix/runs/calculator-fix/attempt-03/: prompt.md
experiments/Super AI/tmp/sleep_stage_smoke_dataset/artifacts/tcn_bigru_smoke/: submission.csv  summary.json
tooling/opensoure/ocrust/: Cargo.toml  README.md
tooling/opensoure/ocrust/artifacts/: benchmark-v1.json
tooling/opensoure/ocrust/docs/research/: benchmark-plan.md
tooling/opensoure/ocrust/examples/: infer_image.rs
tooling/opensoure/ocrust/fixtures/english-printed/: README.md
tooling/opensoure/ocrust/src/decoder/: mod.rs
tooling/opensoure/ocrust/src/eval/: mod.rs
tooling/opensoure/ocrust/src/model/: mod.rs
tooling/opensoure/ocrust/src/preprocess/: mod.rs
(+880 files in other folders)
