[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autotask-lab"
version = "0.1.0"
description = "Task-agnostic autonomous improvement harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[project.scripts]
autotask = "autotask.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
